--- a/Joyce/src/main/resources/templates/test/testPage.html
+++ b/Joyce/src/main/resources/templates/test/testPage.html
@@ -2,41 +2,56 @@
     <title>测试</title>
 </head>
 <div class="layui-input-block">
-    <select name="gncode" id="gncode" style="width: 10%" onchange="testChange()"></select>
-    <div  id="text"></div>
-    <div  id="anstext"></div>
-    <div  id="youans"></div>
-    <div  id="ammm"></div>
-    <input id="sub" type="button" value="提交" onclick="testAns()"/> <input id="ans" type="button" value="答案" onclick="ans()"/>
+   <div class="bg">
+       <textarea id="content"></textarea> <input type="button" onclick="save()">
+       <textarea id="contents"></textarea><input type="button" onclick="getvalue()"/>
+       <div>
+           <input type="text" id="path"/> <input type="button" value="查询" onclick="getTest()"/>
+       </div>
+       <div>
+           <select name="gncode" id="gncode" style="width: 10%" onchange="testChange()"></select>
+       </div>
+       <div id="text"></div>
+       <div id="anstext"></div>
+       <div id="youans"></div>
+       <div id="ammm"></div>
+       <input id="sub" type="button" value="提交" onclick="testAns()"/>
+       <input id="ans" type="button" value="答案" onclick="ans()"/>
+   </div>
 </div>
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
 <script>
     var sumAns = [];
     $(document).ready(function () {
+        getvalue();
         $("#gncode").empty();
-        getTest();
     });
+
     /**
      * 变换页面
      */
     function getTest() {
         sumAns = [];
-        $('#text').css("background","white");
-        $('#anstext').css("background","white");
-        $('#youans').css("background","white");
-        $('#ammm').css("background","white");
+        $('#text').css("background", "white");
+        $('#anstext').css("background", "white");
+        $('#youans').css("background", "white");
+        $('#ammm').css("background", "white");
+        var data = {
+            path: $('#path').val()
+        };
         $.ajax({
             url: '/test/getDocs',
-            type: 'GET',
+            type: 'POST',
             dataType: 'json',
+            data: data,
         }).done(function (data) {
-            if(data.rs){
+            if (data.rs) {
                 var text = "<option class ='option' value=\"\"></option>";
                 var res = data.data;
-                for (let i = 0; i<res.length; i++) {
-                   if ($(".option").length<=res.length+1){
-                       text+="<option class ='option' value=\""+res[i].name+"\">"+res[i].name+"</option>"
-                   }
+                for (let i = 0; i < res.length; i++) {
+                    if ($(".option").length <= res.length + 1) {
+                        text += "<option class ='option' value=\"" + res[i].name + "\">" + res[i].name + "</option>"
+                    }
                 }
                 $('#gncode').append(text);
             }
@@ -44,70 +59,82 @@
         });
     }
 
-    function testChange(){
+    function testChange() {
         $("#text").empty();
         $("#anstext").empty();
         $('#youans').empty();
         $('#ammm').empty();
-        var  name = $("#gncode").val();
+        var name = $("#gncode").val();
         $.ajax({
-            url: '/test/'+name,
+            url: '/test/' + name,
             type: 'GET',
             dataType: 'json',
         }).done(function (data) {
-            if(data.rs){
+            if (data.rs) {
                 var res = data.data;
-                var text ="";
+                var text = "";
                 for (let i = 0; i < res.l1.length; i++) {
-                    text += "<span id='p' align='center' style='font-size: 30px'>"+res.l1[i]+"</span></br>";
-                    if (res.l1[i].indexOf("D．")!==-1){
-                        text +="写出你的答案：<input class='anclass' align='center' type='text' value=''/></br></br>";
+                    text += "<span id='p' align='center' style='font-size: 30px'>" + res.l1[i] + "</span></br>";
+                    if (res.l1[i].indexOf("D．") !== -1) {
+                        text += "写出你的答案：<input class='anclass' align='center' type='text' value=''/></br></br>";
                     }
                 }
-               // console.log(text);
+                // console.log(text);
+                if (res.l2 != null || res.l3 != null) {
+                    if (res.l2.length === 0 || res.l3.length === 0) {
+                        $('#sub').hide();
+                        $('#ans').hide();
+                    } else {
+                        $('#sub').show();
+                        $('#ans').show();
+                    }
+                } else {
+                    $('#sub').hide();
+                    $('#ans').hide();
+                }
                 $("#text").append(text);
             }
         }).fail(function () {
         });
     }
 
-    function testAns(){
+    function testAns() {
         $("#anstext").empty();
         $("#youans").empty();
         $('#ammm').empty();
-        var  name = $("#gncode").val();
+        var name = $("#gncode").val();
         $.ajax({
-            url: '/test/'+name,
+            url: '/test/' + name,
             type: 'GET',
             dataType: 'json',
         }).done(function (data) {
-            if(data.rs){
+            if (data.rs) {
                 var res = data.data;
-                var text ="";
+                var text = "";
                 for (let i = 0; i < res.l2.length; i++) {
                     var an = conver(res.l2[i]);
-                    sumAns.push(an);
-                    text +="<span id='ap' style='font-size: 30px'>("+(i+1)+")"+an+"</span>";
-                    if ((i+1)%5===0){
-                        text+="</br>"
+                    sumAns.push(res.l2[i]);
+                    text += "<span id='ap' style='font-size: 30px'>(" + (i + 1) + ")" + an + "</span>";
+                    if ((i + 1) % 5 === 0) {
+                        text += "</br>"
                     }
                 }
                 var error = "";
                 var errorCount = 0;
-                var ac= document.getElementsByClassName('anclass');
+                var ac = document.getElementsByClassName('anclass');
                 for (let i = 0; i < ac.length; i++) {
-                    if(sumAns[i]!==ac[i].value || ac[i].value===''){
+                    if (sumAns[i] !== ac[i].value || ac[i].value === '') {
                         errorCount++;
                         ac[i].style.background = "pink";
-                        error+="<p align='center' style='width: 80%'>第"+(i+1)+"答案:"+sumAns[i]+"------------->你的答案:"+ac[i].value+"</p>";
+                        error += "<p align='center' style='width: 80%'>第" + (i + 1) + "题:" + sumAns[i] + "------------->你的答案:" + ac[i].value + "</p>";
                     }
                 }
                 $("#anstext").append(text);
-                $("#youans").append("</br><h1>"+funk(errorCount)+"</h1>"+"</br>"+error);
+                $("#youans").append("</br><h1>" + funk(errorCount) + "</h1>" + "</br>" + error);
                 $("#anstext").hide();
                 var ammmm = "";
                 for (let i = 0; i < res.l3.length; i++) {
-                    ammmm += "<span id='p' align='center' style='font-size: 30px'>"+res.l3[i]+"</span></br>";
+                    ammmm += "<span id='p' align='center' style='font-size: 30px'>" + res.l3[i] + "</span></br>";
                 }
                 $('#ammm').append(ammmm);
             }
@@ -115,46 +142,93 @@
         });
     }
 
-    function ans(){
+    function ans() {
         $("#anstext").show();
     }
 
-    function conver(str){
-        if(str.indexOf('A')!==-1){
+    function conver(str) {
+        if (str.indexOf('A') !== -1) {
             return 'A';
         }
-        if(str.indexOf('B')!==-1){
+        if (str.indexOf('B') !== -1) {
             return 'B';
         }
-        if(str.indexOf('C')!==-1){
+        if (str.indexOf('C') !== -1) {
             return 'C';
         }
-        if(str.indexOf('D')!==-1){
+        if (str.indexOf('D') !== -1) {
             return 'D';
         }
     }
 
-    function funk(num){
-        if (num<=3){
-            return '你怎么这么菜，错了'+num+'个';
+    function funk(num) {
+        if (num <= 3) {
+            return '你怎么这么菜，错了' + num + '个';
         }
-        if (3<num&&num<=6){
-            return '太菜了，施主，你是猪吗，错了'+num+'个';
+        if (3 < num && num <= 6) {
+            return '太菜了，施主，你是猪吗，错了' + num + '个';
         }
-        if (6<num&&num<=10){
-            return '别考了，回家养猪去吧，错了'+num+'个';
+        if (6 < num && num <= 10) {
+            return '别考了，回家养猪去吧，错了' + num + '个';
         }
-        if (10<num&&num<=15){
-            return '猪，你听课了？错了'+num+'个';
+        if (10 < num && num <= 15) {
+            return '猪，你听课了？错了' + num + '个';
         }
-        if (15<num&&num<=20){
-            return '你简直连猪都不如，错了'+num+'个';
+        if (15 < num && num <= 20) {
+            return '你简直连猪都不如，错了' + num + '个';
         }
-        if (20<num&&num<=30){
-            return '不用考了，注定失败了，错了'+num+'个';
+        if (20 < num && num <= 30) {
+            return '不用考了，注定失败了，错了' + num + '个';
         }
-        if (num==0){
+        if (num === 0) {
             return '考的不错!!!';
         }
+    }
+    var colorflag = 0;
+    $('.bg').on('click','span',function(){
+        if (colorflag===0){
+            $(this).css('background-color','pink');
+            colorflag = 1;
+        }else {
+            $(this).css('background-color','white');
+            colorflag = 0;
+        }
+        //获取span内容
+    });
+
+    function save(){
+        var data ={
+          code:123,
+          name:123,
+          value:$('#content').val()
+        };
+        $.ajax({
+            url: '/test/saveContent' ,
+            type: 'POST',
+            dataType: 'json',
+            data:data
+        }).done(function (data) {
+           tips(data.res,data.msg);
+        }).fail(function () {
+        });
+    }
+    // 输入框监听回车键
+    $("#content").keydown(function(event){
+        if(event.keyCode === 13){
+            var text = $("#content").val()+"oppo";
+            $("#content").val(text);
+        }
+    });
+    function getvalue() {
+        $.ajax({
+            url: '/test/selectDict' ,
+            type: 'GET',
+            dataType: 'json',
+        }).done(function (data) {
+            document.getElementById("contents").value=data.data.value;
+           // $('#contents').val(data.data.value);
+            console.log(data.data.value);
+        }).fail(function () {
+        });
     }
 </script>
