--- a/Joyce/src/main/resources/templates/password/getListPage.html
+++ b/Joyce/src/main/resources/templates/password/getListPage.html
@@ -5,7 +5,7 @@
     <div class="modal fade" id="myform"  role="dialog" aria-labelledby="password" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header" style="width: 30%;">
                     <h4 class="modal-title" id="forgetModalLabel">
                        <span id="title"></span>
                     </h4>
@@ -154,7 +154,7 @@
         }else {
             for (let i = 0; i < data.length; i++) {
                 var o = data[i];
-                html+= "<div style=\"margin-left: 22px;margin-top: 10px;\">\n" +o.lable+
+                html+= "<div style=\"margin-left: 22px;margin-top: 10px;width: 30%\">\n" +o.lable+
                     "            :<span type=\"text\" class=\""+o.className+" in\""+
                     "                         autoComplete=\"off\"/></span>\n" +
                     "        </div>";
