--- a/Joyce/src/main/resources/templates/common/public/getColumns.html
+++ b/Joyce/src/main/resources/templates/common/public/getColumns.html
@@ -12,17 +12,17 @@
                 <legend>生成代码</legend>
 
                 <div class="form-group ">
-                    <label class="col-sm-2 control-label" for="dbName">database名称</label>
+                    <label class="col-sm-2 control-label" for="dbName">数据库名称</label>
                     <div  class="col-sm-8    ">
                         <!--<input class="form-control" id="dbName" type="text" name="dbName" placeholder="请输入database名称"   required="required" onchange=" getTablesByDatabaseName()"/>-->
-                        <select class="form-control" id="dbName" onchange="getTablesByDatabaseName()"></select>
+                        <select class="form-control" id="dbName" ondblclick="getDatabaseNames()"></select>
                     </div>
                 </div>
 
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="tableName">表名称</label>
                     <div  class="col-sm-8 ">
-                        <select class="form-control" id="tableName"></select>
+                        <select class="form-control" id="tableName" ondblclick="getTablesByDatabaseName()"></select>
                         <!--<input class="form-control" id="tableName" type="text" name="tableName" placeholder="请输入表名称"   required="required"/>-->
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                     <label class="col-sm-2 control-label" for=""> </label>
                     <div class="col-sm-8">
                         <input class="btn btn-default pull-left" id="sure" type="button" onclick="inputColumns()" value="确认"/>
-                        <input type="button" value="查看详情" onclick="lookDetailTableData()"/>
+                        <input class="btn btn-default pull-right" type="button" value="查看详情" onclick="lookDetailTableData()"/>
                         <input  class="btn btn-default pull-right" id="download" type="button" onclick="downloadWebFile()" value="下载"/>
                     </div>
                 </div>
