--- a/Joyce/src/main/resources/templates/common/public/commonFooter.html
+++ b/Joyce/src/main/resources/templates/common/public/commonFooter.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" th:src="@{/static/js/utils/toastr/toastr.js}"></script>
   <script type="text/javascript" th:src="@{/static/js/utils/toastr/totastr-config.js}"></script>
   <script type="text/javascript" th:src="@{/static/js/utils/Ewin/js/Ewin.js}"></script>
+  <script type="text/javascript" th:src="@{/static/js/plumen.js}"></script>
   <!--<script type="text/javascript" th:src="@{/static/assets/waifu-tips.js}"></script>-->
     <div style="margin-left: 50%">
       <p>Copyright ©Joyce</p>
