--- a/Joyce/src/main/resources/templates/common/public/getColumns.html
+++ b/Joyce/src/main/resources/templates/common/public/getColumns.html
@@ -21,8 +21,8 @@
 
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="tableName">表名称</label>
-                    <div  class="col-sm-8 ">
-                        <select class="form-control" id="tableName" ondblclick="getTablesByDatabaseName()"></select>
+                    <div id="tableNameDiv" class="col-sm-8 input-box input-Selector" style="width: 67%">
+                        <input type="text" class="form-control wx-input"   id="tableName" ondblclick="getTablesByDatabaseName()"/>
                         <!--<input class="form-control" id="tableName" type="text" name="tableName" placeholder="请输入表名称"   required="required"/>-->
                     </div>
                 </div>
