--- a/Joyce/src/main/resources/templates/common/public/getColumns.html
+++ b/Joyce/src/main/resources/templates/common/public/getColumns.html
@@ -10,37 +10,36 @@
         <div class="well col-md-6 col-centered">
             <form class="form-horizontal center-block" role="form" method="post">
                 <legend>生成代码</legend>
-
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="dbName">数据库名称</label>
-                    <div  class="col-sm-8    ">
+                    <div id="dbNameDiv" class="col-sm-8 input-box input-Selector">
                         <!--<input class="form-control" id="dbName" type="text" name="dbName" placeholder="请输入database名称"   required="required" onchange=" getTablesByDatabaseName()"/>-->
-                        <select class="form-control" id="dbName" ondblclick="getDatabaseNames()" onchange="getTablesByDatabaseName()"></select>
+                        <input class="form-control  wx-input" id="dbName" ondblclick="getDatabaseNames()" onchange="getTablesByDatabaseName()"/>
                     </div>
                 </div>
-
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="tableName">表名称</label>
-                    <div id="tableNameDiv" class="col-sm-8 input-box input-Selector" style="width: 67%">
-                        <input type="text" class="form-control wx-input"   id="tableName" ondblclick="getTablesByDatabaseName()"/>
+                    <div id="tableNameDiv" class="col-sm-8 input-box input-Selector">
+                        <input type="text" class="form-control wx-input"   id="tableName" onchange="tableStructure()"/>
                         <!--<input class="form-control" id="tableName" type="text" name="tableName" placeholder="请输入表名称"   required="required"/>-->
                     </div>
                 </div>
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for=""> </label>
                     <div class="col-sm-8">
-                        <input class="btn btn-default pull-left" id="sure" type="button" onclick="inputColumns()" value="确认"/>
-                        <input class="btn btn-default pull-right" type="button" value="查看详情" onclick="lookDetailTableData()"/>
+                        <input class="btn btn-default pull-left" id="sure" type="button" onclick="tableStructure()" value="查看表设计"/>
+                        <input class="btn btn-default pull-right" type="button"onclick="lookDetailTableData()" value="查看详情" />
+                        <input class="btn btn-default" id="create" type="button" onclick="inputColumns()" value="创建java代码"/>
                         <input  class="btn btn-default pull-right" id="download" type="button" onclick="downloadWebFile()" value="下载"/>
                     </div>
                 </div>
             </form>
         </div>
-
         <div id="column_table"></div>
     </div>
 </div>
 <input class="title" type="hidden" value="columns">
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
 <script type="text/javascript" th:src="@{/static/js/tools/createCode/getColumn.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/tools/createCode/getDb.js}"></script>
 </html>
