--- a/Joyce/src/main/resources/templates/common/public/getColumns.html
+++ b/Joyce/src/main/resources/templates/common/public/getColumns.html
@@ -20,7 +20,7 @@
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="tableName">表名称</label>
                     <div id="tableNameDiv" class="col-sm-8 input-box input-Selector">
-                        <input type="text" class="form-control wx-input"   id="tableName" onchange="tableStructure()"/>
+                        <input type="text" class="form-control wx-input"   id="tableName"/>
                         <!--<input class="form-control" id="tableName" type="text" name="tableName" placeholder="请输入表名称"   required="required"/>-->
                     </div>
                 </div>
