--- a/Joyce/src/main/resources/templates/source/sourceListPage.html
+++ b/Joyce/src/main/resources/templates/source/sourceListPage.html
@@ -11,13 +11,22 @@
             <div id="toolbar-btn" class="btn-group pull-left" style="padding-bottom:10px;">
               <button id="btn_add" onclick="toList('/example/source/sourcePage')" type="button" class="btn btn-primary btn-space">添加
               </button>
-              <button id="btn_delete" onclick="deleteIdsFuc()" type="button" class="btn btn-danger btn-space">删除
+              <button id="btn_delete" onclick="delete SourceFuc()" type="button" class="btn btn-danger btn-space">删除
               </button>
             </div>
             <div class="pull-right" id="query-form" style="padding-bottom:10px;">
-              <input name="username" placeholder='资源名称' type="text"
-                     style="float:left;width:150px;margin-right:5px;" v-model="sourceUrl"
+              <div class="btn-group">
+              <select name="type" class="form-control">
+                <option value="">全部</option>
+                <option value="0">图片</option>
+                <option value="3">视频</option>
+              </select>
+            </div>
+              <div class="btn-group">
+              <input name="searchWord" placeholder='关键字' type="text"
+                     style="float:left;width:150px;margin-right:5px;" v-model="searchWord"
                      class="form-control">
+              </div>
               <div class="btn-group">
                 <button id="btn_search" onclick="sourceSearch()" type="button" class="btn btn-primary btn-space">搜索
                   <span class="fa fa-search" aria-hidden="true"></span>
