--- a/Joyce/src/main/resources/templates/user/registPage.html
+++ b/Joyce/src/main/resources/templates/user/registPage.html
@@ -10,7 +10,7 @@
                 <legend>用户注册</legend>
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="username">用户名</label>
-                    <div  class="col-sm-4 ">
+                    <div  class="col-sm-8 ">
                         <input class="form-control" id="username" type="text" name="username" placeholder="请输入用户名"/>
                     </div>
                 </div>
@@ -22,7 +22,7 @@
                 </div>
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="nickname">昵称</label>
-                    <div  class="col-sm-4 ">
+                    <div  class="col-sm-8 ">
                         <input class="form-control" id="nickname" type="text" name="nickname" placeholder="请输入昵称"/>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
                     <label class="col-sm-2 control-label" for="regist"> </label>
                     <div class="col-sm-5">
                         <input class="btn btn-default pull-left" id="regist" type="button" onclick="registFuc()" value="注册"/>
-                        <a class="btn btn-default pull-right" th:href="@{'/example/user/login'}">去登录</a>
+                        <a class="btn btn-default pull-right" style="margin-right:-70%" th:href="@{'/example/user/login'}">去登录</a>
                     </div>
                 </div>
             </form>
@@ -51,3 +51,9 @@
     </div>
 </div>
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
+<script type="text/javascript">
+    $(function () {
+        $('#username').val('');
+        $('#password').val('');
+    });
+</script>
