--- a/Joyce/src/main/resources/templates/user/addFriendListPage.html
+++ b/Joyce/src/main/resources/templates/user/addFriendListPage.html
@@ -1,5 +1,5 @@
 <head class="paneBar" th:replace="/common/public/header::header(~{::title})">
-    <title>用户修改基本信息</title>
+    <title>好友申请列表</title>
 </head>
 <div class="container">
     <div class="row row-centered">
