--- a/Joyce/src/main/resources/templates/source/editSqlPage.html
+++ b/Joyce/src/main/resources/templates/source/editSqlPage.html
@@ -6,10 +6,10 @@
 
 <div>
   <div class="form-group ">
-    <label class="col-sm-2 control-label" for="dbName">数据库名称</label>
+    <label class="col-sm-2 control-label" >SQL</label>
     <div  class="col-sm-8 input-box input-Selector data-select">
       <!--<input class="form-control" id="dbName" type="text" name="dbName" placeholder="请输入database名称"   required="required" onchange=" getTablesByDatabaseName()"/>-->
-      <input class="form-control  wx-input" name="x-sql" id="dbName" />
+      <input class="form-control  wx-input" name="x-sql"  />
     </div>
   </div>
 </div>
