--- a/Joyce/src/main/resources/templates/user/loginPage.html
+++ b/Joyce/src/main/resources/templates/user/loginPage.html
@@ -121,6 +121,7 @@
                 }
             }).fail(function () {
                 tips(false,ajaxFailMsg);
+                loading(false);
             });
         }
     }
