--- a/Joyce/src/main/resources/templates/source/editSqlPage.html
+++ b/Joyce/src/main/resources/templates/source/editSqlPage.html
@@ -3,15 +3,21 @@
 <head class="paneBar" th:replace="/common/public/header::header(~{::title})">
   <title>sql编辑</title>
 </head>
+<div class="container">
 
-<div>
-  <div class="form-group ">
-    <label class="col-sm-2 control-label" >SQL</label>
-    <div  class="col-sm-8 input-box input-Selector data-select">
-      <!--<input class="form-control" id="dbName" type="text" name="dbName" placeholder="请输入database名称"   required="required" onchange=" getTablesByDatabaseName()"/>-->
-      <input class="form-control  wx-input" name="x-sql"  />
-    </div>
-  </div>
+      <form  role="form" method="post">
+        <legend>sql执行</legend>
+        <div class="form-group ">
+          <label class="col-sm-2 control-label" > <input class="form-control " name="x-name"  /></label>
+          <div  class="col-sm-10 input-box input-Selector data-select">
+            <!--<input class="form-control" id="dbName" type="text" name="dbName" placeholder="请输入database名称"   required="required" onchange=" getTablesByDatabaseName()"/>-->
+            <input  class="form-control  wx-input" name="x-sql"/>  <input name ="exe" class="button" value="执行"/>
+          </div>
+        </div>
+      </form>
+
+   <!-- <div id="column_table"></div>-->
+
 </div>
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
 <script type="text/javascript" th:src="@{/static/js/source/editSql.js}"></script>
