--- a/Joyce/src/main/resources/templates/tools/uEditor/addUEditorPage.html
+++ b/Joyce/src/main/resources/templates/tools/uEditor/addUEditorPage.html
@@ -89,7 +89,7 @@
             imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
             imageUploadURL: "/example/uedit/upload",
             onload: function () {
-                console.log('onload', this);
+              //  console.log('onload', this);
             },
             /*指定需要显示的功能按钮*/
             toolbarIcons: function () {
